<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="20dp"
    android:columnCount="2"
    android:fadeScrollbars="false"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:rowCount="14">


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_row="0"
        android:text="@string/lisense_register_num" />

    <EditText
        android:id="@+id/editor_register_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginTop="0dp"
        android:layout_row="0" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_row="1"
        android:text="@string/lisense_id" />

    <EditText
        android:id="@+id/editor_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginTop="0dp"
        android:layout_row="1" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/lisense_company_name" />

    <EditText
        android:id="@+id/editor_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/lisense_company_type" />

    <EditText
        android:id="@+id/editor_company_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/lisense_address" />

    <EditText
        android:id="@+id/editor_lisense_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/lisense_legal_person" />

    <EditText
        android:id="@+id/editor_lisense_legal_person"
        android:layout_column="1"
        android:layout_row="5" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/lisense_registered_capital" />

    <EditText
        android:id="@+id/editor_lisense_registered_capital"
        android:layout_column="1"
        android:layout_row="6" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/lisense_foundation_date" />

    <EditText
        android:id="@+id/editor_lisense_foundation_date"
        android:layout_column="1"
        android:layout_row="7" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_column="0"
        android:layout_row="8"
        android:text="@string/lisense_operating_period" />

    <EditText
        android:id="@+id/editor_lisense_operating_period"
        android:layout_column="1"
        android:layout_row="8" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_column="0"
        android:layout_row="9"
        android:text="@string/lisense_business_scope" />

    <EditText
        android:id="@+id/editor_lisense_business_scope"
        android:layout_column="1"
        android:layout_row="9" />


    <android.support.v7.widget.AppCompatTextView
        android:layout_column="0"
        android:layout_row="10"
        android:text="@string/lisense_register_office" />

    <EditText
        android:id="@+id/editor_lisense_register_office"
        android:layout_column="1"
        android:layout_row="10" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_column="0"
        android:layout_row="11"
        android:text="@string/lisense_register_date"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editor_lisense_register_date"
        android:layout_column="1"
        android:layout_row="11"
        android:visibility="invisible" />

</GridLayout>